# AI_map_colouring

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  output.txt  pyproject.toml  requirements.txt  test.py  test_col.py  test_out.txt  test_out_2.txt  test_out_json.txt  validate.py
backend/: coloring.py  debug.py  graph_builder.py  image_processing.py  main.py  renderer.py
frontned/: Dockerfile  index.html  package-lock.json  package.json
frontned/src/: App.css  App.jsx
