[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
